# t25-emulator-firmware

./: CMakeLists.txt  README.md
src/app/: app.c  app.h
src/common/: i2c.c  i2c.h
